[tool.poetry]
name = "pcwasyncio"
version = "0.1.0"
description = ""
authors = ["Jean-Pierre Chauvel <jean.p.chauvel@gmail.com>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^23.2.1"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
